<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fleet_adapter_tb</name>
  <version>0.0.1</version>
  <description>Open-RMF full control fleet adapter for Turtlebot-like robots running nav2</description>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rmf_fleet_adapter</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
